# TC-202502-TF

./: README.md
examples/: e1.educ  e1.ll  e2.educ  ej-if-else-while.dot  ej-if-else-while.educ  ej-if-else-while.ll  ej-imprimir.dot  ej-imprimir.educ  ej-imprimir.ll  ej-leer.dot  ej-leer.educ  ej-leer.ll  ej-total.dot  ej-total.ll
src/: CMakeLists.txt  Driver.h  EduCode.g4  Main.cpp
src/.antlr/: EduCode.interp  EduCodeBaseListener.java  EduCodeLexer.java  EduCodeListener.java  EduCodeParser.java
src/codegen/: CodeGenerator.h  ExpressionGen.h  StatementGen.h  SymbolTable.h  TypeSystem.h
src/diagram/: DotExporter.h  FlowchartGenerator.h  FlowchartNodes.h
src/optimizer/:  LoopOptimizer.h  ConstantFolding.h  DeadCodeElimination.h  LoopOptimizer.h  Optimizer.h
src/runtime/: JITEngine.h  RuntimeSupport.h
